fix characters slider bug on IOS

--- a/src/assets/css/characters.css
+++ b/src/assets/css/characters.css
@@ -254,6 +254,7 @@
    touch-action: manipulation;
    -webkit-tap-highlight-color: transparent;
    transition: transform 0.5s ease, opacity 0.5s ease;
+   overflow: visible;
 }
 .swiper-slide-active {
    pointer-events: auto;
